# FTPS1.0

./: CMakeLists.txt  Generate Certificates.md  IO.c  IO.h  LICENSE  README.md  network.c  network.h  tls.c  tls.h
Crypto/: gcm_encrypto.c  gcm_encrypto.h  msg.h  secure_communication.c  secure_communication.h
client/: Client.c  Command_get.c  Command_get.h  Communicate.c  Communicate.h  File_operation.c  File_operation.h  Login.c  Login.h  Path_operation.c  Path_operation.h  TLS_com.c  TLS_com.h  Up_download.c  Up_download.h  client  init_client.c  init_client.h  protocol_client.c  protocol_client.h
server/: 1.txt  2.txt  Server.c  command_deal.c  command_deal.h  communication.c  communication.h  file_operation.c  file_operation.h  init_server.c  init_server.h  lei  login.c  login.h  path_operation.c  path_operation.h  protocol_server.h  server  tls_com.c  tls_com.h  up_download.c  up_download.h
server/util/: userDB.txt
